--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-11 18:38+0700\n"
-"PO-Revision-Date: 2012-06-11 16:04+0000\n"
+"PO-Revision-Date: 2012-06-12 20:35+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-12 04:54+0000\n"
+"X-Launchpad-Export-Date: 2012-06-13 04:36+0000\n"
 "X-Generator: Launchpad (build 15389)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -5937,7 +5937,7 @@ msgstr "Atualizar catáogo a partir da Internet"
 #: plugins/Quasars/src/ui_quasarsDialog.h:258
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:258
 msgid "Update frequency (days):"
-msgstr "Atualizar frequência (em dias):"
+msgstr "Frequência de atualização (em dias):"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:243
 #: plugins/Quasars/src/ui_quasarsDialog.h:259
