--- a/po/stellarium/ar.po
+++ b/po/stellarium/ar.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-11 18:38+0700\n"
-"PO-Revision-Date: 2012-06-12 20:47+0000\n"
+"PO-Revision-Date: 2012-06-13 19:51+0000\n"
 "Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-13 04:36+0000\n"
-"X-Generator: Launchpad (build 15389)\n"
+"X-Launchpad-Export-Date: 2012-06-14 04:33+0000\n"
+"X-Generator: Launchpad (build 15405)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -5788,6 +5788,9 @@ msgid ""
 "supernovae. Typical view of light curves for supernova type I and type II "
 "you can see %1here%2 (right scale in days) and this model used for plugin."
 msgstr ""
+"في هذا التطبيق يُستخدم نموذج بسيط لمنحنيات مقادير اللمعان لمختلف المستعرات. "
+"تستطيع الاطلاع على شكل نموذجي لمنحنيات اللمعان للمستعرات من النوع  I  والنوع "
+"II في %1هنا%2. المحور الأيمن بالأيام وهو المتعمل في هذا التطبيق."
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:116
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:120
@@ -5825,6 +5828,8 @@ msgid ""
 "If you want read full information about plugin, his history and format of "
 "catalog you can %1get info here%2."
 msgstr ""
+"تستطيع الحصول غلى معلومات كاملة عن هذا التطبيق الإضافي وتاريخه وتنسيق بيانات "
+"الدليل %1هنا%2."
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:161
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:156
