--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-11 18:38+0700\n"
-"PO-Revision-Date: 2012-06-09 15:32+0000\n"
+"PO-Revision-Date: 2012-06-14 07:42+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-12 04:50+0000\n"
-"X-Generator: Launchpad (build 15389)\n"
+"X-Launchpad-Export-Date: 2012-06-15 04:41+0000\n"
+"X-Generator: Launchpad (build 15414)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1918,7 +1918,7 @@ msgstr "Sepanyol"
 
 #: src/translations.h:270
 msgid "Ethiopia"
-msgstr "Sudan"
+msgstr "Ethiopia"
 
 #: src/translations.h:271
 msgid "Finland"
@@ -3881,7 +3881,7 @@ msgstr ""
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:417
 msgid "Oculars Plug-in"
-msgstr ""
+msgstr "Pemalam Okular"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:418
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:259
@@ -3893,7 +3893,7 @@ msgstr "Versi"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:423
 msgid "Overview"
-msgstr ""
+msgstr "Selayang Pandang"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:425
 msgid ""
@@ -3902,6 +3902,10 @@ msgid ""
 "and telescopes, as well as CCD Sensors.  Your first time running the app "
 "will populate some samples to get your started."
 msgstr ""
+"Pemalam ini bertujuan untuk simulasikan apa yang anda lihat melalui kanta "
+"mata. Dialog konfigurasi ini boleh digunakan untuk tambah, ubahsuai, atau "
+"padam kanta mata dan teleskop, dan juga Penderia CCD. Kali pertama anda "
+"jalankan aplikasi ini akan populasikan beberapa sampel untuk permulaan anda."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:426
 msgid ""
@@ -3932,28 +3936,28 @@ msgstr ""
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:429
 msgid "If you find any issues, please let me know.  Enjoy!"
-msgstr ""
+msgstr "Jika anda temui sebarang isu, sila beritahu saya. Nikmatilah!"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:432
 msgid "Hot Keys"
-msgstr ""
+msgstr "Kekunci Panas"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:433
 msgid "The plug-in's key bindings can be edited in the General Tab."
-msgstr ""
+msgstr "Pengikatan kekunci pemalam boleh disunting dalam Tab Am."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:445
 #: plugins/Oculars/src/gui/OcularDialog.cpp:450
 msgid "[no key defined]"
-msgstr ""
+msgstr "[tiada kekunci ditakrif]"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:454
 msgid "Switches on/off the ocular overlay."
-msgstr ""
+msgstr "Hidup/Matikan tindihan atas okular"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:458
 msgid "Opens the pop-up navigation menu."
-msgstr ""
+msgstr "Buka menu navigasi timbul"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:865
 msgid "Enable only if an object is selected"
@@ -4321,6 +4325,8 @@ msgid ""
 "Support is provided via the Launchpad website.  Be sure to put \"%1\" in the "
 "subject when posting."
 msgstr ""
+"Sokongan disediakan melalui laman sesawang Launchpad. Pastikan anda masukkan "
+"\"%1\" dalam tajuk bila mengepos."
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:299
@@ -5743,10 +5749,12 @@ msgid ""
 "A plugin that shows some historical supernovae brighter than 10 visual "
 "magnitude."
 msgstr ""
+"Pemalam yang memaparkan beberapa supernova bersejarah yang mana kecerahannya "
+"lebih dari magnitud visual 10."
 
 #: plugins/Supernovae/src/Supernovae.cpp:145
 msgid "Historical Supernovae configuration window"
-msgstr ""
+msgstr "Tetingkap konfigurasi Supernova bersejarah"
 
 #: plugins/Supernovae/src/Supernova.cpp:99
 msgid "supernova"
@@ -5759,7 +5767,7 @@ msgstr "Jenis supernova: %1"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:106
 msgid "Historical Supernovae Plug-in"
-msgstr ""
+msgstr "Pemalam Supernova Bersejarah"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:111
 msgid ""
@@ -5779,7 +5787,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:113
 msgid "Light curves"
-msgstr ""
+msgstr "Lengkung Cahaya"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:114
 #, qt-format
@@ -5805,11 +5813,11 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:119
 msgid "Sergei Blinnikov"
-msgstr ""
+msgstr "Sergei Blinnikov"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:121
 msgid "Institute for Theoretical and Experimental Physics"
-msgstr ""
+msgstr "Institut Fizik Teori dan Eksperimen"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:122
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:126
@@ -5837,15 +5845,15 @@ msgstr "Kemaskini berikutnya: %1 hari"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:197
 msgid "Historical supernovae is updated"
-msgstr ""
+msgstr "Supernova bersejarah telah dikemaskini"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:236
 msgid "Historical Supernovae Configuration"
-msgstr ""
+msgstr "Konfigurasi Supernova Bersejarah"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:237
 msgid "Historical Supernovae Plug-in Configuration"
-msgstr ""
+msgstr "Konfigurasi Pemalam Supernova Bersejarah"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:239
 #: plugins/Quasars/src/ui_quasarsDialog.h:255
@@ -5881,7 +5889,7 @@ msgstr ""
 
 #: plugins/Quasars/src/Quasars.cpp:148
 msgid "Quasars configuration window"
-msgstr ""
+msgstr "Tetingkap konfigurasi Kuasar"
 
 #: plugins/Quasars/src/Quasar.cpp:95
 msgid "quasar"
@@ -5894,7 +5902,7 @@ msgstr "Z (anjakan merah): %1"
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:108
 msgid "Quasars Plug-in"
-msgstr ""
+msgstr "Pemalam Kuasar"
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:114
 msgid ""
@@ -5905,27 +5913,27 @@ msgstr ""
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:116
 msgid "Veron+ 2010"
-msgstr ""
+msgstr "Veron+ 2010"
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:198
 msgid "Quasars is updated"
-msgstr ""
+msgstr "Kuasar telah dikemaskinikan"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:252
 msgid "Quasars Configuration"
-msgstr ""
+msgstr "Konfigurasi Kuasar"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:253
 msgid "Quasars Plug-in Configuration"
-msgstr ""
+msgstr "Konfigurasi Pemalam Kuasar"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:261
 msgid "Display mode for quasars"
-msgstr ""
+msgstr "Mod paparan untuk kuasar"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:262
 msgid "Enable display of distribution for quasars"
-msgstr ""
+msgstr "Benarkan paparan agihan untuk kuasar"
 
 #: plugins/Pulsars/src/Pulsars.cpp:71
 msgid "Pulsars"
