Launchpad automatic translations update.

--- a/po/stellarium/mr.po
+++ b/po/stellarium/mr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-06-11 18:38+0700\n"
-"PO-Revision-Date: 2012-06-10 07:29+0000\n"
+"PO-Revision-Date: 2012-06-16 14:13+0000\n"
 "Last-Translator: nyogi <nyogi2004@gmail.com>\n"
 "Language-Team: Marathi <mr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-12 04:50+0000\n"
-"X-Generator: Launchpad (build 15389)\n"
+"X-Launchpad-Export-Date: 2012-06-17 04:32+0000\n"
+"X-Generator: Launchpad (build 15419)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -2427,187 +2427,187 @@ msgstr ""
 
 #: src/translations.h:399
 msgid "Sierra Leone"
-msgstr ""
+msgstr "सिरीया लिओन"
 
 #: src/translations.h:400
 msgid "San Marino"
-msgstr ""
+msgstr "सॅन मॅरिनो"
 
 #: src/translations.h:401
 msgid "Senegal"
-msgstr ""
+msgstr "सेनेगल"
 
 #: src/translations.h:402
 msgid "Somalia"
-msgstr ""
+msgstr "सोमालिया"
 
 #: src/translations.h:403
 msgid "Suriname"
-msgstr ""
+msgstr "सुरीनेम"
 
 #: src/translations.h:404
 msgid "Sao Tome and Principe"
-msgstr ""
+msgstr "साओ टोम व प्रिंसिपी"
 
 #: src/translations.h:405
 msgid "El Salvador"
-msgstr ""
+msgstr "एल सॅल्वाडोर"
 
 #: src/translations.h:406
 msgid "Syrian Arab Republic"
-msgstr ""
+msgstr "सिरियन अरब रिपब्लिक"
 
 #: src/translations.h:407
 msgid "Swaziland"
-msgstr ""
+msgstr "स्वाझीलॅन्ड"
 
 #: src/translations.h:408
 msgid "Turks and Caicos Islands"
-msgstr ""
+msgstr "टर्क्स आणि केईकोस बेटे"
 
 #: src/translations.h:409
 msgid "Chad"
-msgstr ""
+msgstr "चॅड"
 
 #: src/translations.h:410
 msgid "French Southern Territories"
-msgstr ""
+msgstr "फ्रेंच सदर्न टेरिटरीज्"
 
 #: src/translations.h:411
 msgid "Togo"
-msgstr ""
+msgstr "टोगो"
 
 #: src/translations.h:412
 msgid "Thailand"
-msgstr ""
+msgstr "थायलंड"
 
 #: src/translations.h:413
 msgid "Tajikistan"
-msgstr ""
+msgstr "ताजिकिस्तान"
 
 #: src/translations.h:414
 msgid "Tokelau"
-msgstr ""
+msgstr "टोकेलाव"
 
 #: src/translations.h:415
 msgid "East Timor"
-msgstr ""
+msgstr "ईस्ट तिमोर"
 
 #: src/translations.h:416
 msgid "Turkmenistan"
-msgstr ""
+msgstr "तुर्कमेनिस्तान"
 
 #: src/translations.h:417
 msgid "Tunisia"
-msgstr ""
+msgstr "ट्यूनीशिया"
 
 #: src/translations.h:418
 msgid "Tonga"
-msgstr ""
+msgstr "टोंगा"
 
 #: src/translations.h:419
 msgid "Turkey"
-msgstr ""
+msgstr "टर्की"
 
 #: src/translations.h:420
 msgid "Trinidad and Tobago"
-msgstr ""
+msgstr "त्रिनिदाद अॅंड टोबॅगो"
 
 #: src/translations.h:421
 msgid "Tuvalu"
-msgstr ""
+msgstr "तुव्हालु"
 
 #: src/translations.h:422
 msgid "Taiwan"
-msgstr ""
+msgstr "तैवान"
 
 #: src/translations.h:423
 msgid "Tanzania"
-msgstr ""
+msgstr "टांझानिया"
 
 #: src/translations.h:424
 msgid "Ukraine"
-msgstr ""
+msgstr "युक्रेन"
 
 #: src/translations.h:425
 msgid "Uganda"
-msgstr ""
+msgstr "युगांडा"
 
 #: src/translations.h:426
 msgid "United States Minor Outlying Islands"
-msgstr ""
+msgstr "युनाइटेड स्टेट्स माइनर आउटलेइंग द्वीप"
 
 #: src/translations.h:427
 msgid "United States"
-msgstr ""
+msgstr "अमेरिकेची संयुक्त संस्थाने"
 
 #: src/translations.h:428
 msgid "Uruguay"
-msgstr ""
+msgstr "उरूग्वे"
 
 #: src/translations.h:429
 msgid "Uzbekistan"
-msgstr ""
+msgstr "उजबेकिस्तान"
 
 #: src/translations.h:430
 msgid "Vatican City State"
-msgstr ""
+msgstr "व्हॅटिकन सिटी स्टेट"
 
 #: src/translations.h:431
 msgid "Saint Vincent and the Grenadines"
-msgstr ""
+msgstr "सैंट विन्सन्ट आणि ग्रेनाडाइंस"
 
 #: src/translations.h:432
 msgid "Venezuela"
-msgstr ""
+msgstr "व्हेनेझुएला"
 
 #: src/translations.h:433
 msgid "British Virgin Islands"
-msgstr ""
+msgstr "ब्रिटिश व्हर्जिन आयलॅंडस्"
 
 #: src/translations.h:434
 msgid "United States Virgin Islands"
-msgstr ""
+msgstr "यूनाइटेड स्टेट वर्जिन द्वीप"
 
 #: src/translations.h:435
 msgid "Viet Nam"
-msgstr ""
+msgstr "व्हिएटनाम"
 
 #: src/translations.h:436
 msgid "Vanuatu"
-msgstr ""
+msgstr "व्हानाटू"
 
 #: src/translations.h:437
 msgid "Wallis and Futuna"
-msgstr ""
+msgstr "वॅलिस आणि फुटूना"
 
 #: src/translations.h:438
 msgid "Samoa"
-msgstr ""
+msgstr "सॅमोआ"
 
 #: src/translations.h:439
 msgid "Yemen"
-msgstr ""
+msgstr "येमेन"
 
 #: src/translations.h:440
 msgid "Mayotte"
-msgstr ""
+msgstr "मायोट"
 
 #: src/translations.h:441
 msgid "Yugoslavia"
-msgstr ""
+msgstr "युगोस्लाव्हीया"
 
 #: src/translations.h:442
 msgid "South Africa"
-msgstr ""
+msgstr "दक्षिण अफ्रीका"
 
 #: src/translations.h:443
 msgid "Zambia"
-msgstr ""
+msgstr "झांबिया"
 
 #: src/translations.h:444
 msgid "Zimbabwe"
-msgstr ""
+msgstr "झिंबांब्बे"
 
 #: src/ui_dateTimeDialogGui.h:296 src/ui_dateTimeDialogGui.h:297
 msgid "/"
@@ -2713,111 +2713,111 @@ msgstr "आकाशस्थ वस्तूचा शोध"
 
 #: src/ui_searchDialogGui.h:505
 msgid "Find Object or Position"
-msgstr ""
+msgstr "ठिकाण  किंवा  वस्तू शोधा"
 
 #: src/ui_searchDialogGui.h:511
 msgid "iota"
-msgstr ""
+msgstr "आयोटा"
 
 #: src/ui_searchDialogGui.h:514
 msgid "alpha"
-msgstr ""
+msgstr "अल्फा"
 
 #: src/ui_searchDialogGui.h:517
 msgid "beta"
-msgstr ""
+msgstr "बिटा"
 
 #: src/ui_searchDialogGui.h:520
 msgid "gamma"
-msgstr ""
+msgstr "गॅमा"
 
 #: src/ui_searchDialogGui.h:523
 msgid "delta"
-msgstr ""
+msgstr "डेल्टा"
 
 #: src/ui_searchDialogGui.h:526
 msgid "epsilon"
-msgstr ""
+msgstr "इप्सिलॉन"
 
 #: src/ui_searchDialogGui.h:529
 msgid "zeta"
-msgstr ""
+msgstr "झिटा"
 
 #: src/ui_searchDialogGui.h:532
 msgid "eta"
-msgstr ""
+msgstr "ईटा"
 
 #: src/ui_searchDialogGui.h:535
 msgid "theta"
-msgstr ""
+msgstr "थिटा"
 
 #: src/ui_searchDialogGui.h:538
 msgid "kappa"
-msgstr ""
+msgstr "काप्पा"
 
 #: src/ui_searchDialogGui.h:541
 msgid "lambda"
-msgstr ""
+msgstr "लँबडा"
 
 #: src/ui_searchDialogGui.h:544
 msgid "mu"
-msgstr ""
+msgstr "म्यु"
 
 #: src/ui_searchDialogGui.h:547
 msgid "nu"
-msgstr ""
+msgstr "न्यु"
 
 #: src/ui_searchDialogGui.h:550
 msgid "xi"
-msgstr ""
+msgstr "xi"
 
 #: src/ui_searchDialogGui.h:553
 msgid "omicron"
-msgstr ""
+msgstr "ओमिक्रॉन"
 
 #: src/ui_searchDialogGui.h:556
 msgid "pi"
-msgstr ""
+msgstr "पाय"
 
 #: src/ui_searchDialogGui.h:559
 msgid "rho"
-msgstr ""
+msgstr "-हो"
 
 #: src/ui_searchDialogGui.h:562
 msgid "sigma"
-msgstr ""
+msgstr "सिग्मा"
 
 #: src/ui_searchDialogGui.h:565
 msgid "tau"
-msgstr ""
+msgstr "टाउ"
 
 #: src/ui_searchDialogGui.h:568
 msgid "upsilon"
-msgstr ""
+msgstr "उप्सिलॉन"
 
 #: src/ui_searchDialogGui.h:571
 msgid "phi"
-msgstr ""
+msgstr "फाय"
 
 #: src/ui_searchDialogGui.h:574
 msgid "chi"
-msgstr ""
+msgstr "ची"
 
 #: src/ui_searchDialogGui.h:577
 msgid "psi"
-msgstr ""
+msgstr "psi"
 
 #: src/ui_searchDialogGui.h:580
 msgid "omega"
-msgstr ""
+msgstr "ओमेगा"
 
 #: src/ui_searchDialogGui.h:582
 msgid "Greek letters for Bayer designations"
-msgstr ""
+msgstr "बाय्र पदासाठी ग्रिक अद्याक्षरे"
 
 #: src/ui_searchDialogGui.h:583
 msgid "Object"
-msgstr ""
+msgstr "वस्तू"
 
 #: src/ui_searchDialogGui.h:584
 msgid "RA/Dec (J2000):"
@@ -2825,7 +2825,7 @@ msgstr "RA/Dec (J2000)"
 
 #: src/ui_searchDialogGui.h:585
 msgid "Position"
-msgstr ""
+msgstr "स्थान"
 
 #: src/ui_searchDialogGui.h:586
 msgid "On-line astronomical database SIMBAD"
@@ -2833,11 +2833,11 @@ msgstr ""
 
 #: src/ui_searchDialogGui.h:587
 msgid "Extend search with SIMBAD"
-msgstr ""
+msgstr "SIMBAD च्या सहाय्याने अधिकचा शोध"
 
 #: src/ui_searchDialogGui.h:588
 msgid "Server:"
-msgstr ""
+msgstr "सर्व्हर :"
 
 #: src/ui_searchDialogGui.h:589 src/ui_viewDialog.h:1184
 #: src/ui_viewDialog.h:1189 src/ui_viewDialog.h:1191
@@ -2922,15 +2922,15 @@ msgstr "वातावरण दर्शवा"
 #: src/ui_viewDialog.h:1132
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:390
 msgid "Light pollution:"
-msgstr ""
+msgstr "प्रकाश प्रदुषण"
 
 #: src/ui_viewDialog.h:1134
 msgid "pressure, temperature, extinction coefficient"
-msgstr ""
+msgstr "दाब, तापमान, विलोप गुणांक"
 
 #: src/ui_viewDialog.h:1136
 msgid "Refraction/Extinction settings..."
-msgstr ""
+msgstr "प्रावर्तन/ विलोप मांडणी"
 
 #: src/ui_viewDialog.h:1137
 msgid "Labels and Markers"
